feat: remove fallback path and gate skipped methods